--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,8 +23,26 @@ jobs:
       - name: Build
         run: make all
 
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: secure-dns-releases
+          path: build/secure-dns-*
+          if-no-files-found: error
+
+  release:
+    needs: build
+    if: github.ref_type == 'tag'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: secure-dns-releases
+
       - name: Upload release
-        if: github.ref_type == 'tag'
         shell: bash
         run: |
           curl -fSsL \
@@ -42,7 +58,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{ github.repository }}/releases/assets/%
           RELEASE_ID=`jq '.id'`
-          ls build/secure-dns-* | xargs -I % curl -fSsL \
+          ls secure-dns-* | xargs -I % curl -fSsL \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
