--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,6 @@ jobs:
       - name: Upload release
         shell: bash
         run: |
-          set -x
           curl -fSsL \
             -o release.json \
             -H "Accept: application/vnd.github+json" \
@@ -64,5 +63,5 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             -H "Content-Type: application/octet-stream" \
-            https://uploads.github.com/repos/${{ github.repository }}/releases/`jq '.id'`/assets?name=% \
+            https://uploads.github.com/repos/${{ github.repository }}/releases/`jq '.id' release.json`/assets?name=% \
             --data-binary @%
