--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Build release
 
 on:
-  - push
-  - pull_request
-  - release:
+  push:
+  pull_request:
+  release:
     types:
       - published
 
